testdata/discovery/multiple-tests/chainsaw-test.yaml
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test
spec:
  steps:
  - name: create configmap
    try:
    - apply:
        file: configmap.yaml
  - name: assert configmap
    try:
    - assert:
        file: configmap.yaml
---
apiVersion: chainsaw.kyverno.io/v1alpha1
kind: Test
metadata:
  name: test
spec:
  steps:
  - name: create configmap
    try:
    - apply:
        file: configmap.yaml
  - name: assert configmap
    try:
    - assert:
        file: configmap.yaml
